# aiutox-erp-core-backend

./: .dockerignore  .editorconfig  .env.docker  .env.example  .gitattributes  .gitignore  .woodpecker.yml  CONEXION_POSTGRES.md  DIAGNOSTICO_REDIS_METADATA.md  Dockerfile  Dockerfile.dev  INFORME_WARNINGS_TESTS.md  INICIAR_BACKEND.md  INICIAR_BACKEND_CON_LOGS.md  INICIAR_SERVIDOR.md  NOTA_STARLETTE_FASTAPI.md  README.md  RESUMEN_CORRECCIONES_WARNINGS.md  SETUP_TEAMS_MODULE.md  SOLUCION_METADATA_REDIS.md  VERIFICAR_INTEGRACION.ps1  alembic.ini  check_logs.py  create_test_admin.py  debug_flow_runs.py  debug_pubsub.py  debug_pubsub_token.py  debug_simple.py  docker-compose.dev.yml  ensure-admin-user.ps1  ensure_admin_user.py  failed_tests.txt  pyproject.toml  start-dev.ps1  test-db-connection.py  test-redis-connection.py  test_app_db_connection.py  test_db_connection.py  test_db_sqlalchemy.py  test_debug_fixture.py  (+5 more)
.github/workflows/: build.yml
.venv_traditional/: pyvenv.cfg
.venv_traditional/Scripts/: activate  activate.bat
app/: emergency_server.py  main.py  main_definitive.py  main_minimal.py
app/analytics/: task_adoption.py
app/api/: deps.py
app/core/: api_response.py  cache.py  config.py  config_file.py  exceptions.py  logging.py  module_interface.py  module_navigation_icons.py  module_registry.py  redis.py
app/decorators/: security.py
app/models/: __init__.py  activity.py  activity_icon_config.py  approval.py  audit_log.py  automation.py  calendar.py  comment.py  config_version.py  contact.py  contact_method.py  delegated_permission.py  file.py  flow_run.py  folder.py  gamification.py  import_export.py  integration.py  module_role.py  notification.py  organization.py  person_identification.py  preference.py  refresh_token.py  reporting.py  search_index.py  system_config.py  tag.py  task.py  task_dependency.py  task_resource.py  task_status.py  task_template.py  team.py  template.py  tenant.py  theme_preset.py  time_entry.py  user.py  user_calendar_preferences.py  (+2 more)
app/monitoring/: task_metrics.py
app/repositories/: __init__.py  activity_repository.py  approval_repository.py  audit_repository.py  automation_repository.py  calendar_repository.py  comment_repository.py  config_repository.py  config_version_repository.py  contact_method_repository.py  contact_repository.py  file_repository.py  flow_run_repository.py  folder_repository.py  gamification_repository.py  import_export_repository.py  integration_repository.py  notification_repository.py  organization_repository.py  permission_repository.py  preference_repository.py  refresh_token_repository.py  reporting_repository.py  search_repository.py  tag_repository.py  task_repository.py  task_repository_optimized.py  template_repository.py  tenant_repository.py  user_repository.py  view_repository.py
app/schemas/: __init__.py  activity.py  activity_icon.py  approval.py  audit.py  auth.py  automation.py  calendar.py  comment.py  comment_minimal.py  common.py  config.py  config_version.py  contact.py  contact_method.py  enhanced_task.py  file.py  file_config.py  flow_run.py  folder.py  import_export.py  integration.py  lazy_imports.py  notification.py  organization.py  permission.py  preference.py  reporting.py  search.py  tag.py  task.py  task_status.py  team.py  template.py  tenant.py  user.py  user_calendar_preferences.py  view.py
app/services/: __init__.py  audit_service.py  auth_service.py  notification_service.py  permission_service.py  team_service.py  user_service.py
app/tasks/: __init__.py
config/: modules.json
database/seeders/: README.md  __init__.py  activity_icon_configs_seeder.py  admin_user_seeder.py  calendar_events_seeder.py  config_seeder.py  database_seeder.py  default_tenant_seeder.py  development_users_seeder.py  gamification_seeder.py  saved_filters_seeder.py  task_statuses_seeder.py  task_templates_seeder.py  test_role_seeder.py  test_tenant_seeder.py  test_user_seeder.py  theme_preset_seeder.py  theme_seeder.py
migrations/: env.py
migrations/versions/: 2025_01_15-add_automation_tables.py  2025_01_15-add_notifications_tables.py  2025_01_15-add_preferences_tables.py  2025_01_15-add_reporting_tables.py  2025_01_16-add_activities_tables.py  2025_01_16-add_files_tables.py  2025_01_16-add_tags_tables.py  2025_01_17-add_integrations_tables.py  2025_01_17-add_search_tables.py  2025_01_17-add_tasks_tables.py  2025_01_22-add_theme_presets_table.py  2025_01_30-add_deleted_at_to_files.py  2025_12_08-001_add_auth_tables.py  2025_12_08-001_rename_organizations_to_tenants.py  2025_12_08-002_add_business_models_and_extend_user.py  2025_12_09-4d08f620a382_add_module_roles_table.py  2025_12_09-57d4493a7380_add_audit_logs_table.py  2025_12_09-add_products_module.py  2025_12_09-af20de189f20_add_delegated_permissions_table.py  2025_12_09-bc1234567890_add_audit_logs_table.py  2025_12_11-a8ae578ac76b_add_system_config_table.py  2025_12_12-add_approvals_tables.py  2025_12_12-add_calendar_tables.py  2025_12_12-add_comments_tables.py  2025_12_12-add_import_export_tables.py  2025_12_12-add_templates_tables.py  2025_12_12-add_views_tables.py  2025_12_21-add_config_versions_table.py  2025_12_21-add_integrations_table.py  2025_12_24-4ad0962434d7_rename_integration_type_to_type.py  2025_12_30-add_folder_id_to_files.py  2026_01_04-add_crm_module.py  2026_01_04-add_inventory_module.py  2026_01_12-add_approvals_audit_fields.py  2026_01_12-add_flow_runs_table.py  2026_01_12-add_steps_form_print_config.py  (+22 more)
scripts/: README.md  README_REDIS_TEST.md  README_TESTS.md  backup_calendar_data.py  check_and_seed_saved_filters.py  check_redis_streams.py  fix_redis_url.py  migrate_calendar_extensions.py  migrate_cli.py  restore_calendar_backup.py  rollback_calendar_migration.py  run_all_tests.sh  run_pubsub_tests.ps1  run_pubsub_tests.py  run_pubsub_tests.sh  test_event_files_comments.py  test_pubsub_simple.py  test_redis_connection.ps1  test_redis_connection.py  test_redis_docker.py  verify_activity_icons.py  verify_migrations.py
tests/: conftest.py  conftest_comments.py  constants.py  helpers.py  test_task_statuses.py
(+543 files in other folders)
