[project]
name = "backend"
version = "0.1.0"
description = "AiutoX ERP Backend - FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.38.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "inquirer>=3.1.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",  # Parallel test execution
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "faker>=33.0.0",
    "ipython>=8.0.0",
    "radon>=6.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pytest-watch>=4.2.0",
    "python-dotenv>=1.0.0",
    "pytest-timeout>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Default: serial execution. Use -n 4 or -n auto for parallel execution
addopts = "-v --tb=short --durations=10"
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
# Markers for test organization
markers = [
    "redis: mark test as requiring Redis",
    "integration: mark test as integration test",
    "db: mark test as database test (may be excluded from parallel execution)",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[project.scripts]
aiutox = "scripts.cli.aiutox:main"

