[project]
name = "backend"
version = "0.1.0"
description = "AiutoX ERP Backend - FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.38.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "inquirer>=3.1.0",
    "aiosmtplib>=3.0.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",  # Parallel test execution
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "faker>=33.0.0",
    "ipython>=8.0.0",
    "radon>=6.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pytest-watch>=4.2.0",
    "python-dotenv>=1.0.0",
    "pytest-timeout>=2.1.0",
    "psutil>=5.9.0",  # For process metrics (CPU, memory)
    "keyboard>=0.13.5",  # For keyboard shortcuts (optional, fallback to menu)
    "pynput>=1.7.6",  # Alternative keyboard library (optional)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.venv_traditional
  | venv
  | \.git
  | __pycache__
  | \.pytest_cache
  | temp_pytest_cache
  | migrations
  | htmlcov
  | \.ruff_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v -n auto --tb=short --durations=10"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = "temp_pytest_cache"
# Default: parallel execution with minimum 4 workers
# -n auto: Auto-detect CPU cores, pero usa mínimo 8 workers para agilizar
# -n 8: Usar exactamente 8 workers
# -n 1: Ejecución serial (para debugging)
# Nota: Cada worker usa su propia base de datos (aiutox_erp_test_worker0, etc.)
# Para forzar workers: usar -n auto o modificar en scripts
asyncio_mode = "auto"
# Note: timeout options require pytest-timeout plugin to be installed
# Uncomment these lines if you install pytest-timeout:
# timeout = 300
# timeout_method = "thread"
# Markers for test organization
markers = [
    "unit: mark test as unit test",
    "redis: mark test as requiring Redis",
    "integration: mark test as integration test",
    "db: mark test as database test (may be excluded from parallel execution)",
    "performance: mark test as performance test",
    "security: mark test as security-related (auth, RBAC, tenant isolation)",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
aiutox = "scripts.cli.aiutox:main"
